--- a/ProyectoFinal-Prog2/src/main/webapp/Home.HTML
+++ b/ProyectoFinal-Prog2/src/main/webapp/Home.HTML
@@ -1,4 +1,4 @@
-<%@ page contentType="text/html; charset=UTF-8" language="java" %>
+<!-- <%@ page contentType="text/html; charset=UTF-8" language="java" %> --> <!-- Hay que volver a activar esta línea si se usa JSP -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -16,7 +16,7 @@
     <ul>
       <li><p>EN</p>
     <ion-icon name="globe"></ion-icon></li>
-      <li><a href="Flota.jsp">Flota</a></li>
+      <li><a href="Flota.html">Flota</a></li>
       <li><a href="#">Locaciones</a></li>
       <li><a href="#">Mis Reservas</a></li>
       <li><a href="#">Sobre Nosotros</a></li>
