Arreglos en href de todas las paginas
Todavía faltan los comentarios

--- a/ProyectoFinal-Prog2/src/main/webapp/SobreNosotros.html
+++ b/ProyectoFinal-Prog2/src/main/webapp/SobreNosotros.html
@@ -19,7 +19,7 @@
             </ul>
         </nav>
         <div class="header-right">
-            <ion-icon name="person"></ion-icon>
+            <a href="LoginAdmin.jsp"><ion-icon name="person"></ion-icon></a>
         </div>
     </header>
     <main>
