--- a/ProyectoFinal-Prog2/src/main/webapp/SobreNosotros.html
+++ b/ProyectoFinal-Prog2/src/main/webapp/SobreNosotros.html
@@ -57,7 +57,7 @@
         <p><strong>Cédula:</strong> 8-109-684</p>
         <p><strong>Edad:</strong> 20 años</p>
         <p><strong>carrera:</strong>Licenciatura en Ingeniería de Software</p>
-        <p><strong>Experiencia:</strong> He trabajado</p>
+        <p><strong>Experiencia:</strong> He hecho distintos trabajos de diseño grafico y excel.</p>
       </div>
 
       <!-- Miembro 4 -->
